fix: align todo-list checkbox with text vertically

--- a/apps/client/src/features/editor/styles/task-list.css
+++ b/apps/client/src/features/editor/styles/task-list.css
@@ -10,6 +10,8 @@ ul[data-type="taskList"] {
         display: flex;
 
         > label {
+            display: flex;
+            align-items: center;
             padding-top: 0.2rem;
             flex: 0 0 auto;
             margin-right: 0.5rem;
